[gd_scene load_steps=14 format=2]

[ext_resource path="res://objects/ui/overrides/ObjectPic.svg" type="Texture" id=1]
[ext_resource path="res://common/fonts/Nunito/Nunito-SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://objects/ui/UIInfoFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://objects/ui/UIInfoFontCursive.tres" type="DynamicFont" id=4]
[ext_resource path="res://objects/ui/button/cross-hover.png" type="Texture" id=5]
[ext_resource path="res://objects/ui/UIAccent.tres" type="DynamicFont" id=6]
[ext_resource path="res://objects/ui/ObjectDetail.gd" type="Script" id=7]
[ext_resource path="res://objects/ui/overrides/minus.svg" type="Texture" id=8]
[ext_resource path="res://objects/ui/button/cross-focused.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.992157, 0.984314, 0.976471, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.823529, 0.247059, 0.666667 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.823529, 0.247059, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Panel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -550.0
margin_top = -188.5
margin_right = 550.0
margin_bottom = 188.5
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margins" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Margins"]
margin_right = 972.0
margin_bottom = 249.0

[node name="TextureRect" type="TextureRect" parent="Margins/Control"]
margin_top = -2.0
margin_right = 256.0
margin_bottom = 251.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="HBoxContainer" parent="Margins/Control"]
anchor_left = 0.281
anchor_top = 0.504
anchor_right = 0.281
anchor_bottom = 0.504
margin_left = -0.132019
margin_top = -126.496
margin_right = 698.868
margin_bottom = 126.504
size_flags_horizontal = 3
size_flags_vertical = 2
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoBox" type="VBoxContainer" parent="Margins/Control/Layout"]
margin_right = 699.0
margin_bottom = 253.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32

[node name="EffectRowHB" type="HBoxContainer" parent="Margins/Control/Layout/InfoBox"]
margin_right = 699.0
size_flags_horizontal = 3

[node name="NameL" type="Label" parent="Margins/Control/Layout/InfoBox"]
margin_top = 32.0
margin_right = 699.0
margin_bottom = 63.0
mouse_filter = 0
custom_colors/font_color = Color( 0.407843, 0.313726, 0.266667, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Название"

[node name="DescriptionL" type="Label" parent="Margins/Control/Layout/InfoBox"]
margin_top = 95.0
margin_right = 699.0
margin_bottom = 179.0
custom_colors/font_color = Color( 0.407843, 0.313726, 0.266667, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Длинное описание предмета примерно на несколько строк чтобы в макете показать как будет выглядеть длинный текст если я открою диалоговое окно где будет отображаться информация о предмете"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomRowHB" type="HBoxContainer" parent="Margins/Control/Layout/InfoBox"]
margin_top = 211.0
margin_right = 699.0
margin_bottom = 237.0
size_flags_horizontal = 3

[node name="DetailL" type="Label" parent="Margins/Control/Layout/InfoBox/BottomRowHB"]
margin_right = 137.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.0235294, 0.737255, 0.756863, 1 )
custom_fonts/font = ExtResource( 4 )
text = "120 содержание"

[node name="Control" type="Control" parent="Margins/Control/Layout/InfoBox/BottomRowHB"]
margin_left = 141.0
margin_right = 141.0
margin_bottom = 26.0

[node name="HBoxContainer" type="HBoxContainer" parent="Margins/Control/Layout/InfoBox/BottomRowHB/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_right = 486.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="Button" parent="Margins/Control/Layout/InfoBox/BottomRowHB/Control/HBoxContainer"]
margin_left = 286.0
margin_right = 486.0
margin_bottom = 51.0
rect_min_size = Vector2( 200, 0 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )

[node name="Label" type="Label" parent="Margins/Control/Layout/InfoBox/BottomRowHB/Control/HBoxContainer/TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_colors/font_color = Color( 0.407843, 0.313726, 0.266667, 1 )
custom_fonts/font = SubResource( 2 )
text = "SWAP_"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="."]
anchor_left = 0.961754
anchor_top = 0.00138889
anchor_right = 0.961754
anchor_bottom = 0.0166667
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}
